tests/typecheck/pass/range_ife2.sail
function (int) branch (([|63|]) x) =
{
  if (x < 32)
  then x + 2
  else (x - 2)
}
