tests/typecheck/fail/zeros.sail

function forall Nat 'n. bit['n] Zeros () =
{
  (bit['n]) 0
}

let x = Zeros ()
